k8s/hmg/frontend/deployment-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-node
  namespace: ns-hmg
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: frontend-node
  template:
    metadata:
      labels:
        app: frontend-node
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: ambiente
                    operator: In
                    values:
                      - hmg
      containers:
      - name: frontend-node
        image: burgues/dockerhub-images:frontend-accd0a4452faf418a1c5910c43833546d0893e59
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3002
        resources:
          requests:
            cpu: "1"
            memory: "2Gi"
          limits:
            cpu: "2"
            memory: "4Gi"
        livenessProbe:
          exec:
            command: ["ls"]
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          exec:
            command: ["ls"]
          initialDelaySeconds: 5
          periodSeconds: 10
