k8s/hmg/frontend/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-node-service
  namespace: ns-hmg
spec:
  selector:
    app: frontend-node
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3002
  type: ClusterIP
